# ProcessCube.Engine.Client.rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish.yaml  tests.yaml
src/: lib.rs  main.rs
src/cli/: client.rs  mod.rs
src/cli/subcommands/: application_info.rs  correlation.rs  mod.rs  process_definition.rs
src/clients/: client_factory.rs  engine_client.rs  error.rs  mod.rs  process_model_client.rs
src/clients/api/: api_client.rs
src/clients/application_info/: application_info.rs  application_info_client.rs  mod.rs
src/clients/correlation/: correlation.rs  correlation_client.rs  mod.rs
src/clients/event/: event.rs  event_client.rs  mod.rs
src/clients/flow_node_instance/: flow_node_instance.rs  flow_node_instance_client.rs  mod.rs
src/clients/process_definition/: mod.rs  process_definition.rs  process_definition_client.rs
src/clients/process_model/: mod.rs  process_model.rs  process_model_client.rs
src/structs/: mod.rs  process_model.rs  process_model_list.rs
tests/: application_info_client.rs  client_factory.rs  fixtures.rs  mod.rs  process_definition_client.rs
tests/application_info_client_tests/: get.rs
tests/client_factory_tests/: create.rs  get.rs
tests/correlation_client_tests/: get.rs
tests/process_definition_client_tests/: delete.rs  get.rs  mod.rs  post.rs
