[package]
name = "processcube_engine_client"
authors = ["Stefan Luthardt  <stefan@luthardt.dev>"]
version = "0.1.0"
edition = "2021"
description = "5Minds ProcessCube® Engine client written in Rust"
license = "MIT"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
